# rust-template

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierrc.yaml  .releaserc.json  .taplo.toml  .tool-versions  .typos.toml  CONTRIBUTING.md  Cargo.toml  README.md  TEMPLATE.md  _README.md  _rust-toolchain.toml  cargo-generate.toml  commitlint.config.js  deny.toml  justfile  package-lock.json  package.json  post-script.rhai  release-plz.toml  shell.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: setup-dev.sh
src/: lib.rs  main.rs
