[package]
name = "{{project-name}}"
description = ""
version = "0.1.0"
edition = "2024"
rust-version = "{{rust_toolchain_version}}"
license = "{{license}}"
repository = "https://github.com/{{gh_username}}/{{project-name}}"
authors = ["{{authors}}"]

# Binary crates rely on cargo's target autodiscovery: src/main.rs becomes
# a binary named after the package. Library crates have src/main.rs removed
# by the conditional file rule in cargo-generate.toml, so no [[bin]] here.
[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[dependencies]
